<resources>
    <string name="app_name">CarePets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //drawer
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    // about us
    <string name="app_developer">Nguyen Thi Tieu Tien
 21GIT
 Vietnam - Korea University Of Information And Communication Technology</string>
    <string name="app_features">Care Pets is the mobile application that show you how to take care of your pets in the best way, and help help you manage routine job about Pets</string>

    // pet list
    <string name="pet_list_title">Pet List</string>
    <string name="plus">+</string>
    <string name="title_activity_main_component">MainComponentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Vaccination</string>
    <string name="tab_text_3">Note</string>
    <string name="delete">x</string>

    // pet infor
    <string name="add_list_title">Add Pet</string>
    <string name="name">Name</string>
    <string name="birth">Birth</string>
    <string name="species">Species</string>
    <string name="submit">Save</string>
    <string name="age">Age</string>

    // overview
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="heart">Heart Beat</string>
    <string name="vaccination">Vaccination</string>
    <string name="test">Medical Test</string>
    <string name="height">Height</string>
    <string name="title_activity_add_weight">AddWeightActivity</string>

    // weight
    <string name="weight_diagram_title">Pet\'s Weight Diagram</string>
    <string name="weight_diagram">Diagram for times of measurement</string>
    <!--    <string name="weight">Weight</string>-->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_weight_title">Add Pet\'s Weight</string>

    // reminder
    <string name="rm_title_meal">Meal Reminders</string>
    <string name="rm_title_walk">Walk Reminders</string>
    <string name="rm_title_medical">Medication Reminders</string>
    <string name="rm_switch_meal">Reminder to feed</string>
    <string name="rm_switch_walk">Reminders for walking</string>
    <string name="rm_switch_medical">Reminders to take daily Medication</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>

    // height
    <string name="add_height_title">Add Pet\'s Height</string>


</resources>