<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainfunction.medicalbook.overview.OverViewFragment"
    android:layout_gravity="center_horizontal"
    android:background="@color/grey"
    android:padding="10dp">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:layout_gravity="center_horizontal"
        >
        <LinearLayout
            android:id="@+id/frame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_height="100dp"
                android:layout_width="150dp"
                app:cardCornerRadius="5dp"
                >
                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_android"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/weight"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_height="100dp"
                android:layout_width="150dp"
                app:cardCornerRadius="5dp"
                >
                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_android"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/height"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_height="100dp"
                android:layout_width="150dp"
                app:cardCornerRadius="5dp"
                >
                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_android"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/length"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frame4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_height="100dp"
                android:layout_width="150dp"
                app:cardCornerRadius="5dp"
                >
                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_android"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/heart"
                android:textStyle="bold" />
        </LinearLayout>
    </GridLayout>


</FrameLayout>

<!--    .mainfunction.medicalbook.overview.OverViewFragment"-->